@@ -5,6 +5,8 @@
   * Compatibility with Python 3.0.
   * Solved a crash when DB handle creation fails.
     STINNER Victor - http://bugs.python.org/issue3307
+  * Improve internal error checking, as suggested by Neal Norwitz
+    when reviewing commit 63207 in Python SVN.
 
 4.7.1:
   * Workaround a problem with un-initialized threads with the
